fix video size on mobile

--- a/css/responsive/mobile.styl
+++ b/css/responsive/mobile.styl
@@ -11,6 +11,6 @@
   left: 0
   width: 100vw
   height: 100vh
-  
+
 video
-  height: 50vh
+  width: 100vw
