--- a/css/responsive/tablet.styl
+++ b/css/responsive/tablet.styl
@@ -4,3 +4,6 @@
   margin-top: -($margin-large * 2)
 
 // ******************************************************
+
+video
+  height: 50vh
