--- a/css/site.css
+++ b/css/site.css
@@ -1093,7 +1093,7 @@ html,
   height: 100vh;
 }
 video {
-  height: 50vh;
+  width: 100vw;
 }
 @media screen and (min-width: 720px) {
   .margin-top-micro {
@@ -1363,6 +1363,9 @@ video {
   }
   #dictionary {
     margin-top: -210px;
+  }
+  video {
+    height: 50vh;
   }
 }
 @media screen and (min-width: 1024px) {
